[gd_scene load_steps=10 format=2]

[ext_resource path="res://os_test.gd" type="Script" id=1]
[ext_resource path="res://noto_sans_ui_bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://noto_sans_ui_regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://actions.gd" type="Script" id=4]
[ext_resource path="res://AudioTest.gd" type="Script" id=5]
[ext_resource path="res://Button.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[node name="OSTest" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 20

[node name="Features" type="RichTextLabel" parent="HBoxContainer"]
margin_right = 450.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/line_separation = 4
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 470.0
margin_right = 920.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
script = ExtResource( 4 )

[node name="Label" type="Label" parent="HBoxContainer/Actions"]
margin_right = 450.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "Actions"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/Actions"]
margin_top = 40.0
margin_right = 450.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenShellWeb" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_right = 223.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Open Shell (web)"

[node name="OpenShellFolder" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_left = 227.0
margin_right = 450.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Open Shell (folder)"

[node name="AudioButton" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_top = 67.0
margin_right = 223.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Audio Button"

[node name="ChangeWindow_toGUI" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_left = 227.0
margin_top = 67.0
margin_right = 450.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change Window to GUI"

[node name="MoveWindowToForeground" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_top = 134.0
margin_right = 223.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Move Window to Foreground"

[node name="RequestAttention" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_left = 227.0
margin_top = 134.0
margin_right = 450.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Request Attention"

[node name="SaveLoad_test" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_top = 201.0
margin_right = 223.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveLoad test"

[node name="3D_test" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_left = 227.0
margin_top = 201.0
margin_right = 450.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3D test"

[node name="TypingEffects_test" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_top = 268.0
margin_right = 223.0
margin_bottom = 331.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Typing effects test"

[node name="RemoveGlobalMenuItem" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_left = 227.0
margin_top = 268.0
margin_right = 450.0
margin_bottom = 331.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Remove Global Menu Item"

[node name="GetClipboard" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_top = 335.0
margin_right = 223.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Get Clipboard Contents"

[node name="SetClipboard" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_left = 227.0
margin_top = 335.0
margin_right = 450.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Set Clipboard Contents"

[node name="DisplayAlert" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_top = 402.0
margin_right = 223.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Display Alert"

[node name="KillCurrentProcess" type="Button" parent="HBoxContainer/Actions/GridContainer"]
margin_left = 227.0
margin_top = 402.0
margin_right = 450.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Kill Current Process"

[node name="MonoTest" type="Node" parent="."]

[node name="AudioTest" type="Node" parent="."]
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioTest"]
stream = ExtResource( 6 )

[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/OpenShellWeb" to="HBoxContainer/Actions" method="_on_OpenShellWeb_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/OpenShellFolder" to="HBoxContainer/Actions" method="_on_OpenShellFolder_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/AudioButton" to="AudioTest" method="_on_AudioButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/ChangeWindow_toGUI" to="HBoxContainer/Actions" method="ChangeWindow_toGUI"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/MoveWindowToForeground" to="HBoxContainer/Actions" method="_on_MoveWindowToForeground_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/RequestAttention" to="HBoxContainer/Actions" method="_on_RequestAttention_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/SaveLoad_test" to="HBoxContainer/Actions" method="_on_SaveLoad_test_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/3D_test" to="HBoxContainer/Actions" method="_on_3D_test_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/TypingEffects_test" to="HBoxContainer/Actions" method="_on_TypingEffects_test_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/RemoveGlobalMenuItem" to="HBoxContainer/Actions" method="_on_RemoveGlobalMenuItem_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/GetClipboard" to="HBoxContainer/Actions" method="_on_GetClipboard_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/SetClipboard" to="HBoxContainer/Actions" method="_on_SetClipboard_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/DisplayAlert" to="HBoxContainer/Actions" method="_on_DisplayAlert_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GridContainer/KillCurrentProcess" to="HBoxContainer/Actions" method="_on_KillCurrentProcess_pressed"]
